--- a/CHANGES
+++ b/CHANGES
@@ -47,6 +47,11 @@ Changes for APR 1.7.1
      events are emitted on pool clear/destroy for proper accounting.
      [Brane Čibej]
 
+  *) apr_socket_listen: Allow larger listen backlog values on Windows 8+.
+     [Evgeny Kotkov <evgeny.kotkov visualsvn.com>]
+
+  *) Fixed: apr_get_oslevel() was returning APR_WIN_XP on Windows 10
+
 Changes for APR 1.7.0
 
   *) apr_dir_read: [Unix] Dropped the preference of the dirread_r() flavor
