Fix problem that apr_get_oslevel() was returning APR_WIN_XP on Windows 10.
* include/arch/win32/apr_arch_misc.h
  (enum apr_oslevel_e): Add APR_WIN_10.

* misc/win32/misc.c
  (apr_get_oslevel): Return APR_WIN_10 when dwMajorVersion is greater than 6.

git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@1861054 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -50,6 +50,8 @@ Changes for APR 1.7.1
   *) apr_socket_listen: Allow larger listen backlog values on Windows 8+.
      [Evgeny Kotkov <evgeny.kotkov visualsvn.com>]
 
+  *) Fixed: apr_get_oslevel() was returning APR_WIN_XP on Windows 10
+
 Changes for APR 1.7.0
 
   *) apr_dir_read: [Unix] Dropped the preference of the dirread_r() flavor
